--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "illuminate/database": "4.2.*",
         "codeguy/upload": "*",
         "ircmaxell/password-compat": "*",
-        "gregwar/captcha": "1.*",
+        "google/recaptcha": "~1.1",
         "augusthur/validation": "*"
     },
     "repositories": [
